--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* ACCORDION */
+
 .accordion {
     width: 50%;
     margin: 5% auto;
@@ -43,8 +45,20 @@
   .txt.active {
     height:60px;
   }
+
+
+  /* SLIDER */
   
-  
+  .slider {
+    width: 30%;
+    margin: 0 auto;
+    height: 200px;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
   
   
   
